<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Timur Iskhakov.
  ~ Distributed under the terms of the MIT License.
-->


<resources>
    <string name="artist_resource_url" translatable="false">http://download.cdn.yandex.net/mobilization-2016/artists.json</string>
    <string name="app_name">Artists</string>
    <string name="short_description_item" formatted="false" translatable="false">%s, %s</string>
    <string name="short_description_artist" formatted="false" translatable="false">"%s   \u22C5   %s"</string>
    <string name="description_title">Biography</string>
    <string name="website">Visit website</string>
    <string name="search">Search</string>
    <string name="all_genres">All genres</string>
    <string name="snackbar_text">No connection</string>
    <string name="snackbar_action_text">Retry</string>

    <string name="no_browser">Please, install a web browser"</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="albums_zero">no albums</string>
    <plurals name="albums">
        <item quantity="zero">@string/albums_zero</item>
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>

    <string name="tracks_zero">no albums</string>
    <plurals name="tracks">
        <item quantity="zero">@string/tracks_zero</item>
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <string name="artist_image_transition" translatable="false">shared_artist_image</string>
</resources>
