<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Timur Iskhakov.
  ~ Distributed under the terms of the MIT License.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.iskhakovt.yandextest.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
